# blake2_c.rs

./: .gitattributes  .travis.yml  Cargo.toml  LICENSE  README.md  README.tpl  appveyor.yml  build.rs
BLAKE2/: README.md
BLAKE2/avx2/: blake2.h  blake2b.c
BLAKE2/ref/: blake2b-ref.c  blake2s-ref.c
BLAKE2/sse/: blake2b.c  blake2s.c
benches/: bench.rs
libb2/: .gitignore  Makefile.in  aclocal.m4  configure
libb2/autom4te.cache/: output.0  requests  traces.0  traces.1
libb2/src/: Makefile.in  config.h.in
src/: bindgen.py  lib.rs  sys.rs  test.rs
