[package]
name = "blake2_c"
version = "0.2.0"
authors = ["Jack O'Connor <oconnor663@gmail.com>"]
description = "a safe wrapper for the official BLAKE2 C implementation"
repository = "https://github.com/oconnor663/blake2_c.rs"
documentation = "https://jacko.io/rustdoc/blake2_c/"
license = "MIT"
build = "build.rs"

[features]
default = ["std"]
std = []
native = []

[dependencies]
arrayvec = {version = "0.4.6", default-features = false}
constant_time_eq = "0.1.3"
cty = "0.1.5"

[build-dependencies]
cc = "1.0.3"
