[package]
name = "blake2_c"
version = "0.3.3"
authors = ["Jack O'Connor <oconnor663@gmail.com>"]
description = "[deprecated] a safe wrapper for the official BLAKE2 C implementation"
repository = "https://github.com/oconnor663/blake2_c.rs"
documentation = "https://docs.rs/blake2_c"
license = "MIT"
build = "build.rs"

[badges]
maintenance = { status = "deprecated" }

[features]
default = ["std"]
std = []
native = []

[dependencies]
arrayvec = {version = "0.4.6", default-features = false}
constant_time_eq = "0.1.3"
cty = "0.1.5"

[build-dependencies]
cc = "1.0.3"
